--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -14,4 +14,13 @@
         <requestFocus />
     </EditText>
 
+    <Button
+        android:id="@+id/orsButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/editText1"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="42dp"
+        android:text="ORS" />
+
 </RelativeLayout>
